# bns-studio-dashboard

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  vite.config.ts
apps/api/: package.json  tsconfig.json
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  README.md  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/web/: .eslintrc.cjs  .gitignore  index.html  main.tsx  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
docs/: ARCHITECTURE.md  BNSSTUDIO_DATA_MODEL.md  BNSSTUDIO_FUNCTIONAL_AUDIT.md  BNSSTUDIO_OPERATING_GUIDE.md  BNS_MARKDOWN_IMPORT_ARCHITECTURE.md  BNS_MARKDOWN_IMPORT_FORMAT.md  BOOTSTRAP.md  CLIENT_PORTAL.md  DATABASE.md  DEMO_MODE.md  DEPLOYMENT.md  DESKTOP_DISTRIBUTION.md  FINANCE.md  MARKDOWN_IMPORT_STANDARD.md  PERMISSIONS.md  RLS.md  ROADMAP.md  SECURITY.md  STUDIO_IMPLEMENTATION_PLAN.md  TESTING.md
docs/markdown-import-examples/: client.md  full-project.md  installment-payments.md  project.md
docs/markdown-templates/: bundle.md  client.md  contract.md  estimate.md  invoice.md  payment.md  project.md
scripts/: macos-notarize.sh
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/app/: RequireAuth.tsx  navigation.ts  router.tsx
src/config/: brandConfig.ts  env.ts
src/data/: db.ts  seed.ts
supabase/: schema.sql  seed.sql
tests/: downloadService.test.ts
tmp/: render-bns-quote.mts
(+239 files in other folders)
